@@ -3,6 +3,8 @@
 Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxx
 --------------------------------
 
+- #831470 infojunkie, alex_b: Fix Import fails due to dates not converted
+  correctly.
 - #916962 alex_b: Fix undefined feeds_reschedule() when upgrading.
 - #919172 andrewlevine, alex_b: Fix enclosure source files deleted.
 - Fix emfield mapper not handling single values properly.
